Fix timeline on mobile views (thanks https://github.com/BlackrockDigital/startbootstrap-sb-admin-2/issues/141#issuecomment-260421076 )

--- a/less/style.less
+++ b/less/style.less
@@ -773,9 +773,9 @@ table.dataTable thead .sorting:after {
     }
 
     ul.timeline > li > .timeline-panel {
-        width: calc(100% - 90px);
-        width: -moz-calc(100% - 90px);
-        width: -webkit-calc(100% - 90px);
+        width: ~"calc(100% - 90px)";
+        width: ~"-moz-calc(100% - 90px)";
+        width: ~"-webkit-calc(100% - 90px)";
     }
 
     ul.timeline > li > .timeline-badge {
